--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="Saints Hard Seltzer"
-      content="Saints Hard Seltzer"
+      content="Saints Hard Seltzer, Alcoholic Beverage made with Natural Flavors, Gluten-Free, Vegan, Kosher, Low-Carbs & No Sugar Added. Try it Now."
     />
     <link rel="apple-touch-icon" href="apple-touch-icon.png" />
     <!--
@@ -34,6 +34,16 @@
     <title>Saints Hard Seltzer</title>
   </head>
   <body>
+
+          <!-- A little help for the Netlify bots if you're not using a SSG -->
+    <form name="SaintsContactForm" netlify netlify-honeypot="bot-field" hidden>
+      <input type="text" name="Nombre" />
+      <input type="text" name="E-Mail" />
+      <input type="text" name="Asunto" />
+      <input type="text" name="Telefono" />
+      <textarea name="Mensaje"></textarea>
+    </form>
+
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
