--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,6 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
         crossorigin="anonymous"
     />
-    
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -40,7 +39,7 @@
       <input type="text" name="Nombre" />
       <input type="text" name="E-Mail" />
       <input type="text" name="Asunto" />
-      <input type="text" name="Telefono" />
+      <input type="number" name="Telefono" />
       <textarea name="Mensaje"></textarea>
     </form>
 
