contact page and working nav bar colors

--- a/public/index.html
+++ b/public/index.html
@@ -36,9 +36,11 @@
 
           <!-- A little help for the Netlify bots if you're not using a SSG -->
     <form name="SaintsContactForm" netlify netlify-honeypot="bot-field" hidden>
-      <input type="text" name="Nombre" />
-      <input type="text" name="E-Mail" />
       <input type="text" name="Asunto" />
+      <input type="text" name="Nombre" />
+      <input type="email" name="E-Mail" />
+      <input type="text" name="Código-Postal" />
+      <input type="date" name="Fecha de Nacimiento" />
       <textarea name="Mensaje"></textarea>
     </form>
 
